llvm_ir/ExprParser.cpp

// Generated from Expr.g4 by ANTLR 4.8


#include "ExprVisitor.h"

#include "ExprParser.h"


using namespace antlrcpp;
using namespace antlr4;

ExprParser::ExprParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

ExprParser::~ExprParser() {
  delete _interpreter;
}

std::string ExprParser::getGrammarFileName() const {
  return "Expr.g4";
}

const std::vector<std::string>& ExprParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& ExprParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- ProgContext ------------------------------------------------------------------

ExprParser::ProgContext::ProgContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ExprParser::ProgContext::EOF() {
  return getToken(ExprParser::EOF, 0);
}

std::vector<ExprParser::ProgStatementContext *> ExprParser::ProgContext::progStatement() {
  return getRuleContexts<ExprParser::ProgStatementContext>();
}

ExprParser::ProgStatementContext* ExprParser::ProgContext::progStatement(size_t i) {
  return getRuleContext<ExprParser::ProgStatementContext>(i);
}


size_t ExprParser::ProgContext::getRuleIndex() const {
  return ExprParser::RuleProg;
}


antlrcpp::Any ExprParser::ProgContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExprVisitor*>(visitor))
    return parserVisitor->visitProg(this);
  else
    return visitor->visitChildren(this);
}

ExprParser::ProgContext* ExprParser::prog() {
  ProgContext *_localctx = _tracker.createInstance<ProgContext>(_ctx, getState());
  enterRule(_localctx, 0, ExprParser::RuleProg);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(29);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == ExprParser::T__7

    || _la == ExprParser::TYPE) {
      setState(26);
      progStatement();
      setState(31);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(32);
    match(ExprParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ProgStatementContext ------------------------------------------------------------------

ExprParser::ProgStatementContext::ProgStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t ExprParser::ProgStatementContext::getRuleIndex() const {
  return ExprParser::RuleProgStatement;
}

void ExprParser::ProgStatementContext::copyFrom(ProgStatementContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- ProgStatContext ------------------------------------------------------------------

ExprParser::VarDeclContext* ExprParser::ProgStatContext::varDecl() {
  return getRuleContext<ExprParser::VarDeclContext>(0);
}

ExprParser::FunctionDeclContext* ExprParser::ProgStatContext::functionDecl() {
  return getRuleContext<ExprParser::FunctionDeclContext>(0);
}

ExprParser::ProgStatContext::ProgStatContext(ProgStatementContext *ctx) { copyFrom(ctx); }


antlrcpp::Any ExprParser::ProgStatContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExprVisitor*>(visitor))
    return parserVisitor->visitProgStat(this);
  else
    return visitor->visitChildren(this);
}
ExprParser::ProgStatementContext* ExprParser::progStatement() {
  ProgStatementContext *_localctx = _tracker.createInstance<ProgStatementContext>(_ctx, getState());
  enterRule(_localctx, 2, ExprParser::RuleProgStatement);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    _localctx = dynamic_cast<ProgStatementContext *>(_tracker.createInstance<ExprParser::ProgStatContext>(_localctx));
    enterOuterAlt(_localctx, 1);
    setState(36);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case ExprParser::TYPE: {
        setState(34);
        varDecl();
        break;
      }

      case ExprParser::T__7: {
        setState(35);
        functionDecl();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BlockContext ------------------------------------------------------------------

ExprParser::BlockContext::BlockContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t ExprParser::BlockContext::getRuleIndex() const {
  return ExprParser::RuleBlock;
}

void ExprParser::BlockContext::copyFrom(BlockContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- BlockStatContext ------------------------------------------------------------------

std::vector<ExprParser::StatementContext *> ExprParser::BlockStatContext::statement() {
  return getRuleContexts<ExprParser::StatementContext>();
}

ExprParser::StatementContext* ExprParser::BlockStatContext::statement(size_t i) {
  return getRuleContext<ExprParser::StatementContext>(i);
}

ExprParser::BlockStatContext::BlockStatContext(BlockContext *ctx) { copyFrom(ctx); }


antlrcpp::Any ExprParser::BlockStatContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExprVisitor*>(visitor))
    return parserVisitor->visitBlockStat(this);
  else
    return visitor->visitChildren(this);
}
ExprParser::BlockContext* ExprParser::block() {
  BlockContext *_localctx = _tracker.createInstance<BlockContext>(_ctx, getState());
  enterRule(_localctx, 4, ExprParser::RuleBlock);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    _localctx = dynamic_cast<BlockContext *>(_tracker.createInstance<ExprParser::BlockStatContext>(_localctx));
    enterOuterAlt(_localctx, 1);
    setState(38);
    match(ExprParser::T__0);
    setState(42);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << ExprParser::T__0)
      | (1ULL << ExprParser::T__27)
      | (1ULL << ExprParser::T__28)
      | (1ULL << ExprParser::T__29)
      | (1ULL << ExprParser::T__30)
      | (1ULL << ExprParser::T__31)
      | (1ULL << ExprParser::T__34)
      | (1ULL << ExprParser::TYPE)
      | (1ULL << ExprParser::ID))) != 0)) {
      setState(39);
      statement();
      setState(44);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(45);
    match(ExprParser::T__1);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VariableContext ------------------------------------------------------------------

ExprParser::VariableContext::VariableContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t ExprParser::VariableContext::getRuleIndex() const {
  return ExprParser::RuleVariable;
}

void ExprParser::VariableContext::copyFrom(VariableContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- VarArrTwoDContext ------------------------------------------------------------------

tree::TerminalNode* ExprParser::VarArrTwoDContext::ID() {
  return getToken(ExprParser::ID, 0);
}

std::vector<ExprParser::ExprContext *> ExprParser::VarArrTwoDContext::expr() {
  return getRuleContexts<ExprParser::ExprContext>();
}

ExprParser::ExprContext* ExprParser::VarArrTwoDContext::expr(size_t i) {
  return getRuleContext<ExprParser::ExprContext>(i);
}

ExprParser::VarArrTwoDContext::VarArrTwoDContext(VariableContext *ctx) { copyFrom(ctx); }


antlrcpp::Any ExprParser::VarArrTwoDContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExprVisitor*>(visitor))
    return parserVisitor->visitVarArrTwoD(this);
  else
    return visitor->visitChildren(this);
}
//----------------- VarIdContext ------------------------------------------------------------------

tree::TerminalNode* ExprParser::VarIdContext::ID() {
  return getToken(ExprParser::ID, 0);
}

ExprParser::VarIdContext::VarIdContext(VariableContext *ctx) { copyFrom(ctx); }


antlrcpp::Any ExprParser::VarIdContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExprVisitor*>(visitor))
    return parserVisitor->visitVarId(this);
  else
    return visitor->visitChildren(this);
}
//----------------- VarArrOneDContext ------------------------------------------------------------------

tree::TerminalNode* ExprParser::VarArrOneDContext::ID() {
  return getToken(ExprParser::ID, 0);
}

ExprParser::ExprContext* ExprParser::VarArrOneDContext::expr() {
  return getRuleContext<ExprParser::ExprContext>(0);
}

ExprParser::VarArrOneDContext::VarArrOneDContext(VariableContext *ctx) { copyFrom(ctx); }


antlrcpp::Any ExprParser::VarArrOneDContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExprVisitor*>(visitor))
    return parserVisitor->visitVarArrOneD(this);
  else
    return visitor->visitChildren(this);
}
ExprParser::VariableContext* ExprParser::variable() {
  VariableContext *_localctx = _tracker.createInstance<VariableContext>(_ctx, getState());
  enterRule(_localctx, 6, ExprParser::RuleVariable);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(61);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx)) {
    case 1: {
      _localctx = dynamic_cast<VariableContext *>(_tracker.createInstance<ExprParser::VarIdContext>(_localctx));
      enterOuterAlt(_localctx, 1);
      setState(47);
      match(ExprParser::ID);
      break;
    }

    case 2: {
      _localctx = dynamic_cast<VariableContext *>(_tracker.createInstance<ExprParser::VarArrOneDContext>(_localctx));
      enterOuterAlt(_localctx, 2);
      setState(48);
      match(ExprParser::ID);
      setState(49);
      match(ExprParser::T__2);
      setState(50);
      expr(0);
      setState(51);
      match(ExprParser::T__3);
      break;
    }

    case 3: {
      _localctx = dynamic_cast<VariableContext *>(_tracker.createInstance<ExprParser::VarArrTwoDContext>(_localctx));
      enterOuterAlt(_localctx, 3);
      setState(53);
      match(ExprParser::ID);
      setState(54);
      match(ExprParser::T__2);
      setState(55);
      expr(0);
      setState(56);
      match(ExprParser::T__3);
      setState(57);
      match(ExprParser::T__2);
      setState(58);
      expr(0);
      setState(59);
      match(ExprParser::T__3);
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VarAssignContext ------------------------------------------------------------------

ExprParser::VarAssignContext::VarAssignContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t ExprParser::VarAssignContext::getRuleIndex() const {
  return ExprParser::RuleVarAssign;
}

void ExprParser::VarAssignContext::copyFrom(VarAssignContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- VariableAssignContext ------------------------------------------------------------------

tree::TerminalNode* ExprParser::VariableAssignContext::ID() {
  return getToken(ExprParser::ID, 0);
}

ExprParser::ExprContext* ExprParser::VariableAssignContext::expr() {
  return getRuleContext<ExprParser::ExprContext>(0);
}

ExprParser::VariableAssignContext::VariableAssignContext(VarAssignContext *ctx) { copyFrom(ctx); }


antlrcpp::Any ExprParser::VariableAssignContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExprVisitor*>(visitor))
    return parserVisitor->visitVariableAssign(this);
  else
    return visitor->visitChildren(this);
}
ExprParser::VarAssignContext* ExprParser::varAssign() {
  VarAssignContext *_localctx = _tracker.createInstance<VarAssignContext>(_ctx, getState());
  enterRule(_localctx, 8, ExprParser::RuleVarAssign);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    _localctx = dynamic_cast<VarAssignContext *>(_tracker.createInstance<ExprParser::VariableAssignContext>(_localctx));
    enterOuterAlt(_localctx, 1);
    setState(63);
    match(ExprParser::ID);
    setState(64);
    match(ExprParser::T__4);
    setState(65);
    expr(0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VarDeclContext ------------------------------------------------------------------

ExprParser::VarDeclContext::VarDeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t ExprParser::VarDeclContext::getRuleIndex() const {
  return ExprParser::RuleVarDecl;
}

void ExprParser::VarDeclContext::copyFrom(VarDeclContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- VariableDeclContext ------------------------------------------------------------------

tree::TerminalNode* ExprParser::VariableDeclContext::TYPE() {
  return getToken(ExprParser::TYPE, 0);
}

ExprParser::VarDeclTypeAContext* ExprParser::VariableDeclContext::varDeclTypeA() {
  return getRuleContext<ExprParser::VarDeclTypeAContext>(0);
}

std::vector<ExprParser::VarDeclTypeBContext *> ExprParser::VariableDeclContext::varDeclTypeB() {
  return getRuleContexts<ExprParser::VarDeclTypeBContext>();
}

ExprParser::VarDeclTypeBContext* ExprParser::VariableDeclContext::varDeclTypeB(size_t i) {
  return getRuleContext<ExprParser::VarDeclTypeBContext>(i);
}

ExprParser::VariableDeclContext::VariableDeclContext(VarDeclContext *ctx) { copyFrom(ctx); }


antlrcpp::Any ExprParser::VariableDeclContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExprVisitor*>(visitor))
    return parserVisitor->visitVariableDecl(this);
  else
    return visitor->visitChildren(this);
}
ExprParser::VarDeclContext* ExprParser::varDecl() {
  VarDeclContext *_localctx = _tracker.createInstance<VarDeclContext>(_ctx, getState());
  enterRule(_localctx, 10, ExprParser::RuleVarDecl);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    _localctx = dynamic_cast<VarDeclContext *>(_tracker.createInstance<ExprParser::VariableDeclContext>(_localctx));
    enterOuterAlt(_localctx, 1);
    setState(67);
    match(ExprParser::TYPE);
    setState(68);
    varDeclTypeA();
    setState(72);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == ExprParser::T__6) {
      setState(69);
      varDeclTypeB();
      setState(74);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(75);
    match(ExprParser::T__5);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VarDeclTypeAContext ------------------------------------------------------------------

ExprParser::VarDeclTypeAContext::VarDeclTypeAContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t ExprParser::VarDeclTypeAContext::getRuleIndex() const {
  return ExprParser::RuleVarDeclTypeA;
}

void ExprParser::VarDeclTypeAContext::copyFrom(VarDeclTypeAContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- VariableDeclTypeAContext ------------------------------------------------------------------

ExprParser::VariableContext* ExprParser::VariableDeclTypeAContext::variable() {
  return getRuleContext<ExprParser::VariableContext>(0);
}

ExprParser::VarAssignContext* ExprParser::VariableDeclTypeAContext::varAssign() {
  return getRuleContext<ExprParser::VarAssignContext>(0);
}

ExprParser::VariableDeclTypeAContext::VariableDeclTypeAContext(VarDeclTypeAContext *ctx) { copyFrom(ctx); }


antlrcpp::Any ExprParser::VariableDeclTypeAContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExprVisitor*>(visitor))
    return parserVisitor->visitVariableDeclTypeA(this);
  else
    return visitor->visitChildren(this);
}
ExprParser::VarDeclTypeAContext* ExprParser::varDeclTypeA() {
  VarDeclTypeAContext *_localctx = _tracker.createInstance<VarDeclTypeAContext>(_ctx, getState());
  enterRule(_localctx, 12, ExprParser::RuleVarDeclTypeA);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    _localctx = dynamic_cast<VarDeclTypeAContext *>(_tracker.createInstance<ExprParser::VariableDeclTypeAContext>(_localctx));
    enterOuterAlt(_localctx, 1);
    setState(79);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx)) {
    case 1: {
      setState(77);
      variable();
      break;
    }

    case 2: {
      setState(78);
      varAssign();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VarDeclTypeBContext ------------------------------------------------------------------

ExprParser::VarDeclTypeBContext::VarDeclTypeBContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t ExprParser::VarDeclTypeBContext::getRuleIndex() const {
  return ExprParser::RuleVarDeclTypeB;
}

void ExprParser::VarDeclTypeBContext::copyFrom(VarDeclTypeBContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- VariableDeclTypeBContext ------------------------------------------------------------------

ExprParser::VariableContext* ExprParser::VariableDeclTypeBContext::variable() {
  return getRuleContext<ExprParser::VariableContext>(0);
}

ExprParser::VarAssignContext* ExprParser::VariableDeclTypeBContext::varAssign() {
  return getRuleContext<ExprParser::VarAssignContext>(0);
}

ExprParser::VariableDeclTypeBContext::VariableDeclTypeBContext(VarDeclTypeBContext *ctx) { copyFrom(ctx); }


antlrcpp::Any ExprParser::VariableDeclTypeBContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExprVisitor*>(visitor))
    return parserVisitor->visitVariableDeclTypeB(this);
  else
    return visitor->visitChildren(this);
}
ExprParser::VarDeclTypeBContext* ExprParser::varDeclTypeB() {
  VarDeclTypeBContext *_localctx = _tracker.createInstance<VarDeclTypeBContext>(_ctx, getState());
  enterRule(_localctx, 14, ExprParser::RuleVarDeclTypeB);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    _localctx = dynamic_cast<VarDeclTypeBContext *>(_tracker.createInstance<ExprParser::VariableDeclTypeBContext>(_localctx));
    enterOuterAlt(_localctx, 1);
    setState(85);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx)) {
    case 1: {
      setState(81);
      match(ExprParser::T__6);
      setState(82);
      variable();
      break;
    }

    case 2: {
      setState(83);
      match(ExprParser::T__6);
      setState(84);
      varAssign();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FunctionArgumentContext ------------------------------------------------------------------

ExprParser::FunctionArgumentContext::FunctionArgumentContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t ExprParser::FunctionArgumentContext::getRuleIndex() const {
  return ExprParser::RuleFunctionArgument;
}

void ExprParser::FunctionArgumentContext::copyFrom(FunctionArgumentContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- FuncArgArrOneDContext ------------------------------------------------------------------

tree::TerminalNode* ExprParser::FuncArgArrOneDContext::TYPE() {
  return getToken(ExprParser::TYPE, 0);
}

tree::TerminalNode* ExprParser::FuncArgArrOneDContext::ID() {
  return getToken(ExprParser::ID, 0);
}

ExprParser::FuncArgArrOneDContext::FuncArgArrOneDContext(FunctionArgumentContext *ctx) { copyFrom(ctx); }


antlrcpp::Any ExprParser::FuncArgArrOneDContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExprVisitor*>(visitor))
    return parserVisitor->visitFuncArgArrOneD(this);
  else
    return visitor->visitChildren(this);
}
//----------------- FuncArgContext ------------------------------------------------------------------

tree::TerminalNode* ExprParser::FuncArgContext::TYPE() {
  return getToken(ExprParser::TYPE, 0);
}

tree::TerminalNode* ExprParser::FuncArgContext::ID() {
  return getToken(ExprParser::ID, 0);
}

ExprParser::FuncArgContext::FuncArgContext(FunctionArgumentContext *ctx) { copyFrom(ctx); }


antlrcpp::Any ExprParser::FuncArgContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExprVisitor*>(visitor))
    return parserVisitor->visitFuncArg(this);
  else
    return visitor->visitChildren(this);
}
//----------------- FuncArgArrTwoDContext ------------------------------------------------------------------

tree::TerminalNode* ExprParser::FuncArgArrTwoDContext::TYPE() {
  return getToken(ExprParser::TYPE, 0);
}

tree::TerminalNode* ExprParser::FuncArgArrTwoDContext::ID() {
  return getToken(ExprParser::ID, 0);
}

ExprParser::FuncArgArrTwoDContext::FuncArgArrTwoDContext(FunctionArgumentContext *ctx) { copyFrom(ctx); }


antlrcpp::Any ExprParser::FuncArgArrTwoDContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExprVisitor*>(visitor))
    return parserVisitor->visitFuncArgArrTwoD(this);
  else
    return visitor->visitChildren(this);
}
ExprParser::FunctionArgumentContext* ExprParser::functionArgument() {
  FunctionArgumentContext *_localctx = _tracker.createInstance<FunctionArgumentContext>(_ctx, getState());
  enterRule(_localctx, 16, ExprParser::RuleFunctionArgument);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(99);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 7, _ctx)) {
    case 1: {
      _localctx = dynamic_cast<FunctionArgumentContext *>(_tracker.createInstance<ExprParser::FuncArgContext>(_localctx));
      enterOuterAlt(_localctx, 1);
      setState(87);
      match(ExprParser::TYPE);
      setState(88);
      match(ExprParser::ID);
      break;
    }

    case 2: {
      _localctx = dynamic_cast<FunctionArgumentContext *>(_tracker.createInstance<ExprParser::FuncArgArrOneDContext>(_localctx));
      enterOuterAlt(_localctx, 2);
      setState(89);
      match(ExprParser::TYPE);
      setState(90);
      match(ExprParser::ID);
      setState(91);
      match(ExprParser::T__2);
      setState(92);
      match(ExprParser::T__3);
      break;
    }

    case 3: {
      _localctx = dynamic_cast<FunctionArgumentContext *>(_tracker.createInstance<ExprParser::FuncArgArrTwoDContext>(_localctx));
      enterOuterAlt(_localctx, 3);
      setState(93);
      match(ExprParser::TYPE);
      setState(94);
      match(ExprParser::ID);
      setState(95);
      match(ExprParser::T__2);
      setState(96);
      match(ExprParser::T__3);
      setState(97);
      match(ExprParser::T__2);
      setState(98);
      match(ExprParser::T__3);
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FunctionDeclContext ------------------------------------------------------------------

ExprParser::FunctionDeclContext::FunctionDeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t ExprParser::FunctionDeclContext::getRuleIndex() const {
  return ExprParser::RuleFunctionDecl;
}

void ExprParser::FunctionDeclContext::copyFrom(FunctionDeclContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- FuncDeclContext ------------------------------------------------------------------

tree::TerminalNode* ExprParser::FuncDeclContext::ID() {
  return getToken(ExprParser::ID, 0);
}

ExprParser::BlockContext* ExprParser::FuncDeclContext::block() {
  return getRuleContext<ExprParser::BlockContext>(0);
}

tree::TerminalNode* ExprParser::FuncDeclContext::TYPE() {
  return getToken(ExprParser::TYPE, 0);
}

std::vector<ExprParser::FunctionArgumentContext *> ExprParser::FuncDeclContext::functionArgument() {
  return getRuleContexts<ExprParser::FunctionArgumentContext>();
}

ExprParser::FunctionArgumentContext* ExprParser::FuncDeclContext::functionArgument(size_t i) {
  return getRuleContext<ExprParser::FunctionArgumentContext>(i);
}

ExprParser::FuncDeclContext::FuncDeclContext(FunctionDeclContext *ctx) { copyFrom(ctx); }


antlrcpp::Any ExprParser::FuncDeclContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExprVisitor*>(visitor))
    return parserVisitor->visitFuncDecl(this);
  else
    return visitor->visitChildren(this);
}
ExprParser::FunctionDeclContext* ExprParser::functionDecl() {
  FunctionDeclContext *_localctx = _tracker.createInstance<FunctionDeclContext>(_ctx, getState());
  enterRule(_localctx, 18, ExprParser::RuleFunctionDecl);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    _localctx = dynamic_cast<FunctionDeclContext *>(_tracker.createInstance<ExprParser::FuncDeclContext>(_localctx));
    enterOuterAlt(_localctx, 1);
    setState(101);
    match(ExprParser::T__7);
    setState(102);
    dynamic_cast<FuncDeclContext *>(_localctx)->functype = _input->LT(1);
    _la = _input->LA(1);
    if (!(_la == ExprParser::T__8

    || _la == ExprParser::TYPE)) {
      dynamic_cast<FuncDeclContext *>(_localctx)->functype = _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
    setState(103);
    match(ExprParser::ID);
    setState(104);
    match(ExprParser::T__9);
    setState(106);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == ExprParser::TYPE) {
      setState(105);
      functionArgument();
    }
    setState(112);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == ExprParser::T__6) {
      setState(108);
      match(ExprParser::T__6);
      setState(109);
      functionArgument();
      setState(114);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(115);
    match(ExprParser::T__10);
    setState(116);
    block();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FunctionCallContext ------------------------------------------------------------------

ExprParser::FunctionCallContext::FunctionCallContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t ExprParser::FunctionCallContext::getRuleIndex() const {
  return ExprParser::RuleFunctionCall;
}

void ExprParser::FunctionCallContext::copyFrom(FunctionCallContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- FuncCallContext ------------------------------------------------------------------

tree::TerminalNode* ExprParser::FuncCallContext::ID() {
  return getToken(ExprParser::ID, 0);
}

std::vector<ExprParser::ExprContext *> ExprParser::FuncCallContext::expr() {
  return getRuleContexts<ExprParser::ExprContext>();
}

ExprParser::ExprContext* ExprParser::FuncCallContext::expr(size_t i) {
  return getRuleContext<ExprParser::ExprContext>(i);
}

ExprParser::FuncCallContext::FuncCallContext(FunctionCallContext *ctx) { copyFrom(ctx); }


antlrcpp::Any ExprParser::FuncCallContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExprVisitor*>(visitor))
    return parserVisitor->visitFuncCall(this);
  else
    return visitor->visitChildren(this);
}
ExprParser::FunctionCallContext* ExprParser::functionCall() {
  FunctionCallContext *_localctx = _tracker.createInstance<FunctionCallContext>(_ctx, getState());
  enterRule(_localctx, 20, ExprParser::RuleFunctionCall);
  size_t _la = 0;
